--- a/emperor.css
+++ b/emperor.css
@@ -2,7 +2,10 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    overscroll-behavior: none;
+}
+
+body{
+    height: 100%;
 }
 
 .container {
