--- a/web02.css
+++ b/web02.css
@@ -4,6 +4,10 @@
     padding: 0;
 }
 
+body{
+    height: 100%;
+}
+
 .container {
     display: grid;
     grid-template-columns: 2fr 4fr;
@@ -129,6 +133,7 @@ img {
     }
 
     .left {
+        display: none;
         transform: translate(-100vw);
         height: 0;
     }
